Multi architecture build

--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -43,6 +43,7 @@ jobs:
           context: .
           push: ${{ github.event_name == 'push' &&
               github.ref == 'refs/heads/HEAD' }}
+          platforms: linux/arm/v7,linux/arm64/v8,linux/amd64
           tags: |
             ${{ github.repository  }}:${{ steps.vars.outputs.sha_short }}
             ${{ github.repository }}:latest
