--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -62,9 +62,9 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          push: false
+          push: ${{ github.event_name == 'push' &&
+              github.ref == 'refs/heads/main' }}
           platforms: linux/arm/v7,linux/arm64/v8,linux/amd64
           tags: |
             ${{ github.repository  }}:${{ steps.vars.outputs.sha_short }}
             ${{ github.repository }}:latest
-
