--- a/.github/workflows/dockerhub.yaml
+++ b/.github/workflows/dockerhub.yaml
@@ -54,9 +54,8 @@ jobs:
       # Set the Docker image version
       - name: Set docker version
         run: |
-          [[ "${{ github.ref_type }}" == "tag" ]] && VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,;s/^v//')
+          [[ "${{ github.ref_type }}" == "tag" ]] && VERSION=$(echo "${{ github.ref }}" | VERSION=$(git rev-parse --short HEAD)
           echo "version=$VERSION" >> $GITHUB_OUTPUT
-          echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -70,5 +69,5 @@ jobs:
               github.repository_owner == 'mehr74' }}
           platforms: linux/arm/v7,linux/arm64/v8,linux/amd64
           tags: |
-            ${{ github.repository }}:${{ steps.vars.outputs.sha_short }}
             ${{ github.repository }}:${{ steps.vars.outputs.version }}
+            ${{ github.repository }}:latest
