--- a/.github/workflows/dockerhub.yaml
+++ b/.github/workflows/dockerhub.yaml
@@ -71,5 +71,5 @@ jobs:
               github.repository_owner == 'mehr74' }}
           platforms: linux/arm/v7,linux/arm64/v8,linux/amd64
           tags: |
-            ${{ github.repository }}:${{ steps.vars.outputs.sha_short }}
-            ${{ github.repository }}:${{ steps.vars.outputs.version }}
+            mehrshadlotfi/clamav-exporter:${{ steps.vars.outputs.sha_short }}
+            mehrshadlotfi/clamav-exporter:${{ steps.vars.outputs.version }}
